Added missing xspace

--- a/kramer.sty
+++ b/kramer.sty
@@ -27,8 +27,8 @@
 \newcommand{\todo}[1]{(\textbf{{#1}})\PackageWarning{Kramer-Commands}{TODO in document. Fix and remove}}
 
 % Command for correct spelling of periodogram.
-\def\pgram{periodogram}
-\def\Pgram{Periodogram}
+\def\pgram{periodogram\xspace}
+\def\Pgram{Periodogram\xspace}
 
 % Command for making a custom text (1) have a hyper link with the url also in a footnote
 % Requires: hyperref
